<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookList</string>
    <string name="list_title">B o o k s</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="electronic_variant">Electronic variant</string>
    <string name="genre">Genre</string>
    <string name="publish_date">Publish date</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_book_edit">BookEditActivity</string>
    <string name="name_hint">Enter book name</string>
    <string name="author_hint">Enter author name</string>
    <string name="publish_date_hint">Publish date</string>

</resources>